--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -20,6 +20,16 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
+    - name: Set up Go 1.15.3
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.15.3
+      id: go
+    - name: Set GOPATH
+      run: |
+        echo "##[set-env name=GOPATH;]$(dirname $GITHUB_WORKSPACE)"
+        echo "##[add-path]$(dirname $GITHUB_WORKSPACE)/bin"
+      shell: bash
     - name: Checkout
       uses: actions/checkout@master
     - name: Initialization environment
