--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -44,6 +44,7 @@ jobs:
     - name: Build Firmware
       env:
         TNAME: RM2100
+        GOPATH: /home/runner/go
       run: |
         cd /opt/rt-n56u/trunk
         if [ ! -f configs/templates/$TNAME.config ] ; then
