--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -20,6 +20,10 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.15.3
     - name: Checkout
       uses: actions/checkout@master
     - name: Initialization environment
@@ -39,7 +43,10 @@ jobs:
     - name: Build Firmware
       env:
         TNAME: RM2100
+        GOROOT: "/opt/hostedtoolcache/go/1.15.3/x64"
+        GOPATH: "/opt/hostedtoolcache/go/1.15.3/x64"
       run: |
+        echo "/opt/hostedtoolcache/go/1.15.3/x64" >> $GITHUB_PATH
         cd /opt/rt-n56u/trunk
         if [ ! -f configs/templates/$TNAME.config ] ; then
         echo "configs/templates/$TNAME.config not found "
