--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -1,5 +1,5 @@
 #修改TNAME: K2P-5.0 中的K2P-5.0为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
-name: Build Padavan
+name: Build Padavan for R2100
 
 on: 
   release:
@@ -42,7 +42,7 @@ jobs:
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
-        TNAME: RM2100
+        TNAME: R2100
         GOROOT: "/opt/hostedtoolcache/go/1.15.3/x64"
         GOPATH: "/opt/hostedtoolcache/go/1.15.3/x64"
       run: |
